// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add edit totalhearings form contains expected labels, fields and buttons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-describedby="modal_id-desc"
        aria-labelledby="modal_id-title"
        aria-modal="true"
        class="cf-modal active "
        id="modal_id"
        role="dialog"
      >
        <div
          class="cf-modal-body"
          id="custom-total-hearings-modal"
        >
          <button
            class="cf-modal-close"
            id="Edit-total-hearings-per-week-button-id-close"
            type="button"
          >
            <span
              class="usa-sr-only"
            >
              Close
            </span>
            <svg
              class="cf-icon-close"
              height="55"
              viewBox="0 0 55 55"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close
              </title>
              <g
                fill="#212121"
              >
                <path
                  d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
                />
              </g>
            </svg>
          </button>
          <div
            style="display: flex; flex-wrap: wrap;"
          >
            <h1
              id="modal_id-title"
              style="flex: 1;"
            >
              Edit total hearings per week
            </h1>
            <div
              data-css-2flkvz=""
            >
              <div>
                <h2>
                  New Contractor
                </h2>
                <p>
                  <strong>
                    Current goal of hearings per week: 1
                  </strong>
                </p>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="current_goal"
                  >
                    <span>
                      Hearings per week
                    </span>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="current_goal"
                      name="current_goal"
                      type="text"
                      value="1"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cf-modal-divider"
          />
          <div
            class="cf-modal-controls"
          >
            <span>
              <button
                class="cf-modal-link cf-btn-link cf-push-left usa-button"
                id="Edit-total-hearings-per-week-button-id-0"
                type="button"
              >
                Cancel
              </button>
            </span>
            <span>
              <button
                class="usa-button usa-button-primary cf-push-right usa-button"
                id="Edit-total-hearings-per-week-button-id-1"
                type="button"
              >
                Confirm
              </button>
            </span>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id="custom-total-hearings-modal"
      >
        <button
          class="cf-modal-close"
          id="Edit-total-hearings-per-week-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Edit total hearings per week
          </h1>
          <div
            data-css-2flkvz=""
          >
            <div>
              <h2>
                New Contractor
              </h2>
              <p>
                <strong>
                  Current goal of hearings per week: 1
                </strong>
              </p>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="current_goal"
                >
                  <span>
                    Hearings per week
                  </span>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="current_goal"
                    name="current_goal"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <span>
            <button
              class="cf-modal-link cf-btn-link cf-push-left usa-button"
              id="Edit-total-hearings-per-week-button-id-0"
              type="button"
            >
              Cancel
            </button>
          </span>
          <span>
            <button
              class="usa-button usa-button-primary cf-push-right usa-button"
              id="Edit-total-hearings-per-week-button-id-1"
              type="button"
            >
              Confirm
            </button>
          </span>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Add edit totalhearings form validates input to be greater than 0 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-describedby="modal_id-desc"
        aria-labelledby="modal_id-title"
        aria-modal="true"
        class="cf-modal active "
        id="modal_id"
        role="dialog"
      >
        <div
          class="cf-modal-body"
          id="custom-total-hearings-modal"
        >
          <button
            class="cf-modal-close"
            id="Edit-total-hearings-per-week-button-id-close"
            type="button"
          >
            <span
              class="usa-sr-only"
            >
              Close
            </span>
            <svg
              class="cf-icon-close"
              height="55"
              viewBox="0 0 55 55"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close
              </title>
              <g
                fill="#212121"
              >
                <path
                  d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
                />
              </g>
            </svg>
          </button>
          <div
            style="display: flex; flex-wrap: wrap;"
          >
            <h1
              id="modal_id-title"
              style="flex: 1;"
            >
              Edit total hearings per week
            </h1>
            <div
              data-css-2flkvz=""
            >
              <div>
                <h2>
                  New Contractor
                </h2>
                <p>
                  <strong>
                    Current goal of hearings per week: 0
                  </strong>
                </p>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="current_goal"
                  >
                    <span>
                      Hearings per week
                    </span>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="current_goal"
                      name="current_goal"
                      type="text"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cf-modal-divider"
          />
          <div
            class="cf-modal-controls"
          >
            <span>
              <button
                class="cf-modal-link cf-btn-link cf-push-left usa-button"
                id="Edit-total-hearings-per-week-button-id-0"
                type="button"
              >
                Cancel
              </button>
            </span>
            <span>
              <button
                class="usa-button usa-button-primary cf-push-right usa-button"
                id="Edit-total-hearings-per-week-button-id-1"
                type="button"
              >
                Confirm
              </button>
            </span>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id="custom-total-hearings-modal"
      >
        <button
          class="cf-modal-close"
          id="Edit-total-hearings-per-week-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Edit total hearings per week
          </h1>
          <div
            data-css-2flkvz=""
          >
            <div>
              <h2>
                New Contractor
              </h2>
              <p>
                <strong>
                  Current goal of hearings per week: 0
                </strong>
              </p>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="current_goal"
                >
                  <span>
                    Hearings per week
                  </span>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="current_goal"
                    name="current_goal"
                    type="text"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <span>
            <button
              class="cf-modal-link cf-btn-link cf-push-left usa-button"
              id="Edit-total-hearings-per-week-button-id-0"
              type="button"
            >
              Cancel
            </button>
          </span>
          <span>
            <button
              class="usa-button usa-button-primary cf-push-right usa-button"
              id="Edit-total-hearings-per-week-button-id-1"
              type="button"
            >
              Confirm
            </button>
          </span>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Add edit totalhearings form validates input to be less than 1000 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-describedby="modal_id-desc"
        aria-labelledby="modal_id-title"
        aria-modal="true"
        class="cf-modal active "
        id="modal_id"
        role="dialog"
      >
        <div
          class="cf-modal-body"
          id="custom-total-hearings-modal"
        >
          <button
            class="cf-modal-close"
            id="Edit-total-hearings-per-week-button-id-close"
            type="button"
          >
            <span
              class="usa-sr-only"
            >
              Close
            </span>
            <svg
              class="cf-icon-close"
              height="55"
              viewBox="0 0 55 55"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close
              </title>
              <g
                fill="#212121"
              >
                <path
                  d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
                />
              </g>
            </svg>
          </button>
          <div
            style="display: flex; flex-wrap: wrap;"
          >
            <h1
              id="modal_id-title"
              style="flex: 1;"
            >
              Edit total hearings per week
            </h1>
            <div
              data-css-2flkvz=""
            >
              <div>
                <h2>
                  New Contractor
                </h2>
                <p>
                  <strong>
                    Current goal of hearings per week: 1001
                  </strong>
                </p>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="current_goal"
                  >
                    <span>
                      Hearings per week
                    </span>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="current_goal"
                      name="current_goal"
                      type="text"
                      value="1001"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cf-modal-divider"
          />
          <div
            class="cf-modal-controls"
          >
            <span>
              <button
                class="cf-modal-link cf-btn-link cf-push-left usa-button"
                id="Edit-total-hearings-per-week-button-id-0"
                type="button"
              >
                Cancel
              </button>
            </span>
            <span>
              <button
                class="usa-button usa-button-primary cf-push-right usa-button"
                id="Edit-total-hearings-per-week-button-id-1"
                type="button"
              >
                Confirm
              </button>
            </span>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id="custom-total-hearings-modal"
      >
        <button
          class="cf-modal-close"
          id="Edit-total-hearings-per-week-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Edit total hearings per week
          </h1>
          <div
            data-css-2flkvz=""
          >
            <div>
              <h2>
                New Contractor
              </h2>
              <p>
                <strong>
                  Current goal of hearings per week: 1001
                </strong>
              </p>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="current_goal"
                >
                  <span>
                    Hearings per week
                  </span>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="current_goal"
                    name="current_goal"
                    type="text"
                    value="1001"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <span>
            <button
              class="cf-modal-link cf-btn-link cf-push-left usa-button"
              id="Edit-total-hearings-per-week-button-id-0"
              type="button"
            >
              Cancel
            </button>
          </span>
          <span>
            <button
              class="usa-button usa-button-primary cf-push-right usa-button"
              id="Edit-total-hearings-per-week-button-id-1"
              type="button"
            >
              Confirm
            </button>
          </span>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Add edit totalhearings form validates input to not allow strings 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-describedby="modal_id-desc"
        aria-labelledby="modal_id-title"
        aria-modal="true"
        class="cf-modal active "
        id="modal_id"
        role="dialog"
      >
        <div
          class="cf-modal-body"
          id="custom-total-hearings-modal"
        >
          <button
            class="cf-modal-close"
            id="Edit-total-hearings-per-week-button-id-close"
            type="button"
          >
            <span
              class="usa-sr-only"
            >
              Close
            </span>
            <svg
              class="cf-icon-close"
              height="55"
              viewBox="0 0 55 55"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close
              </title>
              <g
                fill="#212121"
              >
                <path
                  d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
                />
              </g>
            </svg>
          </button>
          <div
            style="display: flex; flex-wrap: wrap;"
          >
            <h1
              id="modal_id-title"
              style="flex: 1;"
            >
              Edit total hearings per week
            </h1>
            <div
              data-css-2flkvz=""
            >
              <div>
                <h2>
                  New Contractor
                </h2>
                <p>
                  <strong>
                    Current goal of hearings per week: invalid
                  </strong>
                </p>
                <div
                  class="cf-form-textinput   "
                >
                  <label
                    for="current_goal"
                  >
                    <span>
                      Hearings per week
                    </span>
                  </label>
                  <div
                    class="input-container"
                  >
                    <input
                      class="cf-form-textinput"
                      id="current_goal"
                      name="current_goal"
                      type="text"
                      value="invalid"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cf-modal-divider"
          />
          <div
            class="cf-modal-controls"
          >
            <span>
              <button
                class="cf-modal-link cf-btn-link cf-push-left usa-button"
                id="Edit-total-hearings-per-week-button-id-0"
                type="button"
              >
                Cancel
              </button>
            </span>
            <span>
              <button
                class="usa-button usa-button-primary cf-push-right usa-button"
                id="Edit-total-hearings-per-week-button-id-1"
                type="button"
              >
                Confirm
              </button>
            </span>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-describedby="modal_id-desc"
      aria-labelledby="modal_id-title"
      aria-modal="true"
      class="cf-modal active "
      id="modal_id"
      role="dialog"
    >
      <div
        class="cf-modal-body"
        id="custom-total-hearings-modal"
      >
        <button
          class="cf-modal-close"
          id="Edit-total-hearings-per-week-button-id-close"
          type="button"
        >
          <span
            class="usa-sr-only"
          >
            Close
          </span>
          <svg
            class="cf-icon-close"
            height="55"
            viewBox="0 0 55 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close
            </title>
            <g
              fill="#212121"
            >
              <path
                d="M52.6 46.9l-6 6c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-13-13-13 13c-.8.8-1.9 1.2-3 1.2s-2.2-.4-3-1.2l-6-6c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l13-13-13-13c-.8-.8-1.2-1.9-1.2-3s.4-2.2 1.2-3l6-6c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l13 13 13-13c.8-.8 1.9-1.2 3-1.2s2.2.4 3 1.2l6 6c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3l-13 13 13 13c.8.8 1.2 1.9 1.2 3s-.4 2.2-1.2 3z"
              />
            </g>
          </svg>
        </button>
        <div
          style="display: flex; flex-wrap: wrap;"
        >
          <h1
            id="modal_id-title"
            style="flex: 1;"
          >
            Edit total hearings per week
          </h1>
          <div
            data-css-2flkvz=""
          >
            <div>
              <h2>
                New Contractor
              </h2>
              <p>
                <strong>
                  Current goal of hearings per week: invalid
                </strong>
              </p>
              <div
                class="cf-form-textinput   "
              >
                <label
                  for="current_goal"
                >
                  <span>
                    Hearings per week
                  </span>
                </label>
                <div
                  class="input-container"
                >
                  <input
                    class="cf-form-textinput"
                    id="current_goal"
                    name="current_goal"
                    type="text"
                    value="invalid"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="cf-modal-divider"
        />
        <div
          class="cf-modal-controls"
        >
          <span>
            <button
              class="cf-modal-link cf-btn-link cf-push-left usa-button"
              id="Edit-total-hearings-per-week-button-id-0"
              type="button"
            >
              Cancel
            </button>
          </span>
          <span>
            <button
              class="usa-button usa-button-primary cf-push-right usa-button"
              id="Edit-total-hearings-per-week-button-id-1"
              type="button"
            >
              Confirm
            </button>
          </span>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
